--- a/certifications/index.html
+++ b/certifications/index.html
@@ -19,13 +19,13 @@
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
           <ul>
-            <li><a class="active" href="#home">Home</a></li>
+            <li><a  href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#education">Education</a></li>
             <li><a href="#work">Project</a></li>
             <li><a href="#experience">Experience</a></li>
-            <li><a href="#certification">Certification</a></li>
+            <li><a class="active" href="#certification">Certification</a></li>
             <li><a href="#expertise">Expertise</a></li>
             <li><a href="#service">Service</a></li>
             <li><a href="#publication">Publication</a></li>
