--- a/index.html
+++ b/index.html
@@ -280,6 +280,18 @@
       <div class="container right">
         <div class="content">
           <div class="tag">
+            <h2>Human Centric Engineering Research Center</h2>
+          </div>
+          <div class="desc">
+              <h3>Web Developer (Full-Stack Internship)</h3>
+              <p>Jul 2023 - Oct 2023</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- <div class="container left">
+        <div class="content">
+          <div class="tag">
             <h2>Bangkit Academy by Google, Tokopedia, Gojek & Traveloka</h2>
           </div>
           <div class="desc">
@@ -287,7 +299,7 @@
             <p>Feb 2023 - Aug 2023</p>
           </div>
         </div>
-      </div>
+      </div> -->
 
     <div class="morebtn">
       <a href="/experience" class="btn"><span>View All</span>
