--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
           </div>
           <div class="desc">
             <h3>Web Developer (Contract)</h3>
-            <p>Jul 2024 - Aug 2024</p>
+            <p>Jul 2024 - Present</p>
           </div>
         </div>
       </div>
