--- a/experience/index.html
+++ b/experience/index.html
@@ -186,7 +186,7 @@
             target="_blank"></a>
           <a href="https://github.com/berlianm" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
           <a href="mailto:berlianm6@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
-          <a href="https://twitter.com/berliaaanm" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a>
+          <a href="https://twitter.com/daymentz" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a>
         </div>
       </div>
     </div>
